--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,47 +1,28 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
+  "name": "athasha",
   "private": true,
+  "version": "0.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
-    "history": "5",
-    "http-proxy-middleware": "^2.0.4",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "6",
-    "react-scripts": "4.0.3",
-    "sync-sha1": "^1.0.1",
-    "web-vitals": "^1.0.1"
+    "react": "17.0.2",
+    "react-bootstrap": "^2.3.0",
+    "react-dom": "17.0.2",
+    "sass": "^1.50.1",
+    "sync-sha1": "^1.0.1"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^1.3.0",
+    "vite": "^2.9.5"
   }
 }
