--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.3.0",
     "react-dom": "17.0.2",
+    "react-resize-detector": "^7.0.0",
     "sass": "^1.50.1",
     "sync-sha1": "^1.0.1"
   },
