--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-dom": "17.0.2",
     "react-resize-detector": "^7.0.0",
     "sass": "^1.50.1",
-    "sync-sha1": "^1.0.1"
+    "sync-sha1": "^1.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
