--- a/ports/modbus-serial-master/modbus-serial-master.csproj
+++ b/ports/modbus-serial-master/modbus-serial-master.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-   <ProjectReference Include="..\SharpTools\SharpTools.csproj"/>  
+   <ProjectReference Include="..\sharp-tools\sharp-tools.csproj"/>  
     <PackageReference Include="System.IO.Ports" Version="6.0.0" />
   </ItemGroup>
 
