sql server database net port

--- a/native/serial/serial.csproj
+++ b/native/serial/serial.csproj
@@ -5,11 +5,13 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
-    <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
-   <ProjectReference Include="..\tools\tools.csproj"/>  
+    <ProjectReference Include="..\tools\tools.csproj"/>  
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="System.IO.Ports" Version="6.0.0" />
   </ItemGroup>
 
