--- a/native/database/database.csproj
+++ b/native/database/database.csproj
@@ -4,8 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <InvariantGlobalization>true</InvariantGlobalization>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
