--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,10 @@
     "numeral": "^2.0.6",
     "react": "17.0.2",
     "react-bootstrap": "^2.3.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "17.0.2",
     "react-resize-detector": "^7.0.0",
+    "recharts": "^2.1.9",
     "sass": "^1.50.1",
     "sync-sha1": "^1.0.1",
     "uuid": "^8.3.2"
