--- a/cloud/package.json
+++ b/cloud/package.json
@@ -15,7 +15,9 @@
     "react": "18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
-    "sass": "^1.51.0"
+    "sass": "^1.51.0",
+    "sqlite3": "^5.0.8",
+    "stripe": "^9.1.0"
   },
   "devDependencies": {
     "eslint": "8.15.0",
