--- a/cloud/package.json
+++ b/cloud/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "moment": "^2.29.3",
     "next": "12.1.6",
     "numeral": "^2.0.6",
     "react": "18.1.0",
