--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.3.0",
     "react-datepicker": "^4.7.0",
+    "react-debounce-render": "^8.0.2",
     "react-dom": "17.0.2",
     "react-resize-detector": "^7.0.0",
     "recharts": "^2.1.9",
