--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
+    "json-stable-stringify": "^1.0.1",
     "numeral": "^2.0.6",
     "react": "17.0.2",
     "react-bootstrap": "^2.3.0",
