--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,10 @@
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
     "json-stable-stringify": "^1.0.1",
+    "monaco-editor": "0.29.x",
     "numeral": "^2.0.6",
+    "prettier": "^2.7.1",
+    "prop-types": "^15.6.0",
     "react": "17.0.2",
     "react-bootstrap": "^2.3.0",
     "react-datepicker": "^4.7.0",
@@ -30,14 +33,15 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "17.0.39",
+    "@types/react-dom": "17.0.11",
     "@vitejs/plugin-react": "^1.3.0",
     "eslint": "^8.16.0",
     "eslint-plugin-react": "^7.30.0",
     "happy-dom": "^5.2.0",
     "vite": "^2.9.5",
     "vite-plugin-eslint": "^1.6.1",
+    "vite-plugin-monaco-editor": "^1.0.10",
     "vitest": "^0.14.1"
   }
 }
