--- a/terminal/Makefile
+++ b/terminal/Makefile
@@ -1,25 +1,45 @@
-#target is ALWAYS Linux (qemu on host)
+#P_TARGET is ALWAYS Linux (qemu on host)
 #run with:
 # mix compile
 # mix clean
 
 SRCDIR = src
-PRVDIR = priv
-TARGET = $(PRVDIR)/tty
-SOURCES = $(wildcard $(SRCDIR)/*.c) 
-CFLAGS = -fPIC -g -O3 -pedantic -Wall -Wextra 
-LCFLAGS= -L$(SRCDIR)/termbox/src -l:termbox.a
+PRVDIR = priv/native
+
+N_SOURCES = $(SRCDIR)/tty_nif.c
+N_TARGET = $(PRVDIR)/tty_nif.so
+N_FLAGS = -fPIC -I$(ERTS_INCLUDE_DIR) -shared -g -O3 -pedantic -Wall -Wextra
+
+P_TARGET = $(PRVDIR)/tty_port
+P_SOURCES = $(wildcard $(SRCDIR)/*port.c)
+P_CFLAGS = -fPIC -g -O3 -pedantic -Wall -Wextra 
+P_LDFLAGS= -L$(SRCDIR)/termbox/src -l:termbox.a
+
+TB_SRCDIR = src/termbox/src
+TB_TARGET = $(TB_SRCDIR)/termbox.a
+TB_SOURCES = $(wildcard $(TB_SRCDIR)/*.c)
+TB_OBJECTS = $(TB_SOURCES:.c=.o)
+TB_CFLAGS = -fPIC -D_XOPEN_SOURCE
 
 .PHONY: all clean
 
-all: $(TARGET)
+all: $(N_TARGET) $(P_TARGET)
 
-$(TARGET): $(SOURCES)
-	echo "CC" $(CC)
+$(P_TARGET): $(P_SOURCES) $(TB_TARGET)
 	mkdir -p $(PRVDIR)
-	make -f Termbox.mk
-	$(CC) $(CFLAGS) $(SOURCES) -o $@ $(LCFLAGS)
+	$(CC) $(P_CFLAGS) $(P_SOURCES) -o $@ $(P_LDFLAGS)
+
+%.o : %.c
+	$(CC) -c $(TB_CFLAGS) $< -o $@
+	
+$(TB_TARGET): $(TB_OBJECTS)
+	$(AR) -r -o $@ $(TB_OBJECTS)
+
+$(N_TARGET): $(N_SOURCES)
+	$(CC) $(N_FLAGS) -o $@ $<
 
 clean:
-	make clean -f Termbox.mk
-	rm -f $(TARGET)
+	rm -f $(N_TARGET)
+	rm -f $(TB_OBJECTS)
+	rm -f $(TB_TARGET)
+	rm -f $(P_TARGET)
