--- a/terminal/Makefile
+++ b/terminal/Makefile
@@ -1,31 +1,43 @@
-#P_TARGET is ALWAYS Linux (qemu on host)
-#run with:
-# mix compile
-# mix clean
+# https://hexdocs.pm/nerves/environment-variables.html
+# run with:
+#  mix compile
+#  mix clean
 
 SRCDIR = src
 PRVDIR = priv/native
+UNAME := $(shell uname -s)
+
+C_CFLAGS = -g -O3 -pedantic -Wall -Wextra -D_XOPEN_SOURCE=700
+C_LDFLAGS = -fPIC
 
 N_SOURCES = $(SRCDIR)/tty_nif.c
 N_TARGET = $(PRVDIR)/tty_nif.so
-N_FLAGS = -fPIC -I$(ERTS_INCLUDE_DIR) -shared -g -O3 -pedantic -Wall -Wextra -D_XOPEN_SOURCE=700
-N_LDFLAGS= 
+N_CFLAGS = $(C_CFLAGS) -I$(ERTS_INCLUDE_DIR)
+N_LDFLAGS= $(C_LDFLAGS) -shared -L$(ERL_EI_LIBDIR)
 
 P_TARGET = $(PRVDIR)/tty_port
 P_SOURCES = $(wildcard $(SRCDIR)/*port.c)
-P_CFLAGS = -fPIC -g -O3 -pedantic -Wall -Wextra -D_XOPEN_SOURCE=700
-P_LDFLAGS= 
+P_CFLAGS = $(C_CFLAGS)
+P_LDFLAGS= $(C_LDFLAGS)
+
+ifeq ($(UNAME),Darwin)
+N_CFLAGS += -D_DARWIN_C_SOURCE
+P_CFLAGS += -D_DARWIN_C_SOURCE
+N_LDFLAGS += -dynamiclib -undefined dynamic_lookup
+endif
 
 .PHONY: all clean
 
 all: $(P_TARGET) $(N_TARGET)
 
-$(P_TARGET): $(P_SOURCES) 
+$(PRVDIR):
 	mkdir -p $(PRVDIR)
+
+$(P_TARGET): $(PRVDIR) $(P_SOURCES) 
 	$(CC) $(P_CFLAGS) $(P_SOURCES) -o $@ $(P_LDFLAGS)
 	
-$(N_TARGET): $(N_SOURCES) 
-	$(CC) $(N_FLAGS) $(N_SOURCES) -o $@ $(N_LDFLAGS)
+$(N_TARGET): $(PRVDIR) $(N_SOURCES) 
+	$(CC) $(N_CFLAGS) $(N_SOURCES) -o $@ $(N_LDFLAGS)
 
 clean:
 	rm -f $(N_TARGET)
