--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -31,15 +31,14 @@ endif
 
 .PHONY: all clean
 
-all: $(CH_TARGET) $(SLV_TARGET) $(MTR_TARGET)
+all: $(CH_TARGET) $(SLV_TARGET)
 
-$(DSTDIR):
-	mkdir -p $(DSTDIR)
-
-$(SLV_TARGET): $(DSTDIR) $(SLV_SOURCES) 
+$(SLV_TARGET): $(SLV_SOURCES) 
+	[ -d $(DSTDIR) ] || mkdir -p $(DSTDIR)
 	$(CC) $(SLV_CFLAGS) $(SLV_SOURCES) -o $@ $(SLV_LDFLAGS)
 
-$(CH_TARGET): $(DSTDIR) $(CH_SOURCES) 
+$(CH_TARGET): $(CH_SOURCES) 
+	[ -d $(DSTDIR) ] || mkdir -p $(DSTDIR)
 	$(CC) $(CH_CFLAGS) $(CH_SOURCES) -o $@ $(CH_LDFLAGS)
 	
 clean:
