--- a/teletype/.gitignore
+++ b/teletype/.gitignore
@@ -20,11 +20,7 @@ erl_crash.dump
 *.ez
 
 # Ignore package tarball (built via "mix hex.build").
-athasha_tty-*.tar
+teletype-*.tar
 
 # Temporary files, for example, from tests.
 /tmp/
-
-*.so
-*.o
-*.a
